[package]
name = "valorant-rs"
version = "0.1.0"
edition = "2021"
authors = ["Ole D <hi@cloudybyte.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

